--- a/ormconfig.json
+++ b/ormconfig.json
@@ -4,5 +4,9 @@
   "port": 5432,
   "username": "postgres",
   "password": "docker",
-  "database": "gostask_gobarber"
+  "database": "gostask_gobarber",
+  "migrations": ["./src/database/migrations/*.ts"],
+  "cli": {
+    "migrationsDir": "./src/database/migrations"
+  }
 }
