--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev  --inspect --transpile-only  --ignore-watch node_modules src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+    "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only  --ignore-watch node_modules src/shared/infra/http/server.ts",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -28,6 +28,7 @@
     "@types/jsonwebtoken": "^8.5.2",
     "@types/multer": "^1.4.6",
     "ts-node-dev": "^1.1.6",
+    "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.4"
   }
 }
